@@ -254,6 +254,7 @@ TESTSUITE_AT = \
  update01.at\
  update02.at\
  update03.at\
+ update04.at\
  volsize.at\
  volume.at\
  verbose.at\
