@@ -455,6 +455,7 @@ m4_include([update.at])
 m4_include([update01.at])
 m4_include([update02.at])
 m4_include([update03.at])
+m4_include([update04.at])
 
 AT_BANNER([Verifying the archive])
 m4_include([verify.at])
