@@ -1,4 +1,4 @@
-GNU tar NEWS - User visible changes. 2023-01-06
+GNU tar NEWS - User visible changes. 2023-07-10
 Please send GNU tar bug reports to <bug-tar@gnu.org>
 
 version 1.34.90 (git)
@@ -10,6 +10,8 @@ version 1.34.90 (git)
   non-special files, as this is more compatible with traditional tar.
 
 * Bug fixes
+
+** Fix interaction of --update with --wildcards
 
 ** Warn "file changed as we read it" less often.
    Formerly, tar warned if the file's size or ctime changed.
